    related to service configuration. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-3523. Fixes auto-deallocation of cluster if job id is not found in
    Torque's job list (Hemanth Yamijala via ddas)

    HADOOP-3531. Fixes a bug related to handling JobTracker failures because of
    timing issues on slow nodes. (Hemanth Yamijala via ddas)

Release 0.17.0 - 2008-05-18

  INCOMPATIBLE CHANGES

    HADOOP-3137. Modified build script to pick up version automatically
    from Hadoop build. (yhemanth)

  IMPROVEMENTS

    HADOOP-2775.  Adds unit test framework for HOD.
    (Vinod Kumar Vavilapalli via ddas).

    HADOOP-2848. [HOD]hod -o list and deallocate works even after deleting
    the cluster directory. (Hemanth Yamijala via ddas)

    HADOOP-2899. [HOD] Cleans up hdfs:///mapredsystem directory after
    deallocation. (Hemanth Yamijala via ddas)

    HADOOP-2796. Enables distinguishing exit codes from user code vis-a-vis
    HOD's exit code. (Hemanth Yamijala via ddas)

    HADOOP-2947. HOD redirects stdout and stderr of daemons to assist
    getting stack traces. (Vinod Kumar Vavilapalli via yhemanth)

  BUG FIXES

    HADOOP-2924. Fixes an address problem to do with TaskTracker binding
    to an address. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2970. Fixes a problem to do with Wrong class definition for
    hodlib/Hod/hod.py for Python < 2.5.1.
    (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2783. Fixes a problem to do with import in
    hod/hodlib/Common/xmlrpc.py. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2936. Fixes HOD in a way that it generates hdfs://host:port on the
    client side configs. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2983. [HOD] Fixes the problem - local_fqdn() returns None when
    gethostbyname_ex doesnt return any FQDNs. (Craig Macdonald via ddas)

    HADOOP-2982. Fixes a problem in the way HOD looks for free nodes.
    (Hemanth Yamijala via ddas)
